--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -27,6 +27,8 @@
 
 \plush{\sqmTitlePage{5}{xnSnPfVkmkM}}
 
+\plush{\pptPic{.6}{wtfs.png}}
+
 \pitch{\pptQuote{fred-brooks.jpg}{The total \ul{cost of maintaining} a widely used program is typically 40 percent or more of the cost of developing it}{Fred Brooks, \textit{The Mythical Man-Month: Essays on Software Engineering}, 1982}}
 
 \pitch{\pptQuote{ward-cunningham.jpg}{Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as interest on that debt.}{Ward Cunningham, \textit{Experience Report --- The WyCash portfolio management system}, OOPSLA, 1992}}
