--- a/main.bib
+++ b/main.bib
@@ -850,3 +850,10 @@
   year={2018},
   organization={Springer}
 }
+
+@book{johnson1977lint,
+  title={{Lint, a C Program Checker}},
+  author={Johnson, Stephen C.},
+  year={1977},
+  publisher={{Bell Labs}}
+}
