--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -112,8 +112,10 @@
     \item Commits Density
 
     \item Builds
+    \item Code Style
 
 {\color{gray}
+    \item Static Analysis
     \item Stars and Forks
     \item Neural Metrics
 
