--- a/main.bib
+++ b/main.bib
@@ -509,7 +509,7 @@
 }
 
 @book{kernighan1974elements,
-  title={{Elements of Programming Style}},
+  title={{The Elements of Programming Style}},
   author={Kernighan, Brian W. and Plauger, Phillip James},
   year={1974},
   publisher={McGraw-Hill, Inc.}
