--- a/main.bib
+++ b/main.bib
@@ -857,3 +857,14 @@
   year={1977},
   publisher={{Bell Labs}}
 }
+
+@article{green2011coding,
+  title={{Coding Guidelines: Finding the Art in the Science}},
+  author={Green, Robert and Ledgard, Henry},
+  journal={{Communications of the ACM}},
+  volume={54},
+  number={12},
+  pages={57--63},
+  year={2011},
+  publisher={ACM New York, NY, USA}
+}
