--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -67,10 +67,10 @@ int fibonacci(int n) {
   {green2011coding}
 
 \pitch{\includegraphics[width=.95\linewidth]{three-ifs.png}
-\source{green2011coding}}
+  \source{green2011coding}}
 
 \plush{\pptBanner{My Favorite Style Checkers}
-\begin{itemize}
+  \begin{itemize}
     \item \href{https://www.qulice.com}{Qulice} for Java (\href{https://checkstyle.sourceforge.io/}{Checkstyle} + \href{https://pmd.github.io/}{PMD})
     \item \href{https://eslint.org/}{ESLint} for JavaScript
     \item \href{https://clang.llvm.org/extra/clang-tidy/}{Clang-Tidy} for C++
@@ -78,6 +78,24 @@ int fibonacci(int n) {
     \item \href{https://github.com/rubocop/rubocop}{Rubocop} for Ruby
     \item \href{https://github.com/squizlabs/PHP_CodeSniffer}{PHP\_CodeSniffer} for PHP
     \item \href{https://github.com/rust-lang/rustfmt}{rustfmt} for Rust
+  \end{itemize}}
+
+\plush{\pptBanner{How Many Rules in Style Checkers?}
+  \begin{itemize}
+    \item 690+ in Clang-Tidy (C++)
+    \item 550+ in Rubocop (Ruby)
+    \item 400+ in PMD (Java)
+    \item 130+ in Checkstyle (Java)
+    \item 120+ in Pylint (Python)
+  \end{itemize}
+  \par{\small Some/most of the rules no only check style, but also find bugs\par}}
+
+\plush{\pptBanner{Some Exotic Style Checkers}
+  \begin{itemize}
+    \item \href{https://github.com/koalaman/shellcheck}{Shellcheck} for Bash
+    \item \href{https://github.com/markdownlint/markdownlint}{markdownlint} for Markdown
+    \item \href{https://github.com/mrtazz/checkmake}{Checkmake} for Makefile
+    \item \href{https://github.com/yegor256/xcop}{xcop} for XML
   \end{itemize}}
 
 \end{document}
