--- a/main.bib
+++ b/main.bib
@@ -868,3 +868,12 @@
   year={2011},
   publisher={ACM New York, NY, USA}
 }
+
+@misc{bugayenko2014blog0813,
+  author = {Bugayenko, Yegor},
+  title = {{Strict Control of Java Code Quality}},
+  howpublished = {\url{https://www.yegor256.com/140813.html}},
+  year = {2014},
+  month = {August},
+  note = {[Online; accessed 26-02-2024]}
+}
