--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -66,6 +66,12 @@ int fibonacci(int n) {
   {An individual's body language helps clarify the spoken word. In a similar sense, the programmer relies on \ul{white space}---what is not said directly---in the code to communicate logic, intent, and understanding.}
   {green2011coding}
 
+\qte
+  [Jennifer Bauer]
+  {jennifer-bauer.jpg}
+  {While the perceptual processing of code is required to understand it, \ul{higher level processing}, such as understanding its semantics and reasoning about its functionality, affect program comprehensibility more strongly. The influence of indentation could have been masked by these side effects, so it might well be that the effect of indentation comes more into play when the code is \ul{longer} and \ul{more complex}.}
+  {bauer2019indentation}
+
 \pitch{\includegraphics[width=.95\linewidth]{three-ifs.png}
   \source{green2011coding}}
 
