--- a/main.bib
+++ b/main.bib
@@ -877,3 +877,12 @@
   month = {August},
   note = {[Online; accessed 26-02-2024]}
 }
+
+@inproceedings{bauer2019indentation,
+  title={{Indentation: Simply a Matter of Style or Support for Program Comprehension?}},
+  author={Bauer, Jennifer and Siegmund, Janet and Peitek, Norman and Hofmeister, Johannes C. and Apel, Sven},
+  booktitle={{Proceedings of the 27th International Conference on Program Comprehension (ICPC)}},
+  pages={154--164},
+  year={2019},
+  organization={IEEE}
+}
