--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -72,6 +72,12 @@ int fibonacci(int n) {
   {While the perceptual processing of code is required to understand it, \ul{higher level processing}, such as understanding its semantics and reasoning about its functionality, affect program comprehensibility more strongly. The influence of indentation could have been masked by these side effects, so it might well be that the effect of indentation comes more into play when the code is \ul{longer} and \ul{more complex}.}
   {bauer2019indentation}
 
+\qte
+  [Weiqin Zou]
+  {weiqin-zou.jpg}
+  {A pull request that is \ul{consistent} with the current code style tends to be merged into the codebase more \ul{easily} (faster).}
+  {bauer2019indentation}
+
 \pitch{\includegraphics[width=.95\linewidth]{three-ifs.png}
   \source{green2011coding}}
 
