--- a/main.bib
+++ b/main.bib
@@ -886,3 +886,13 @@
   year={2019},
   organization={IEEE}
 }
+
+@article{zou2019does,
+  title={{How does code style inconsistency affect pull request integration? An exploratory study on 117 GitHub projects}},
+  author={Zou, Weiqin and Xuan, Jifeng and Xie, Xiaoyuan and Chen, Zhenyu and Xu, Baowen},
+  journal={{Empirical Software Engineering}},
+  volume={24},
+  pages={3871--3903},
+  year={2019},
+  publisher={Springer}
+}
