--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -67,6 +67,18 @@ int fibonacci(int n) {
   {green2011coding}
 
 \qte
+  [Peter C. Rigby]
+  {peter-rigby.jpg}
+  {We list the reasons why our interviewees \ul{rejected} a patch or required further modification before accepting it:
+    Poor quality,
+    \ul{Violation of style},
+    Gratuitous changes mixed with `true' changes,
+    Code does not do or fix what it claims to or introduces new bugs,
+    Fix conflicts with existing code,
+    Use of incorrect API or library.}
+  {rigby2011understanding}
+
+\qte
   [Jennifer Bauer]
   {jennifer-bauer.jpg}
   {While the perceptual processing of code is required to understand it, \ul{higher level processing}, such as understanding its semantics and reasoning about its functionality, affect program comprehensibility more strongly. The influence of indentation could have been masked by these side effects, so it might well be that the effect of indentation comes more into play when the code is \ul{longer} and \ul{more complex}.}
