--- a/main.bib
+++ b/main.bib
@@ -896,3 +896,11 @@
   year={2019},
   publisher={Springer}
 }
+
+@inproceedings{rigby2011understanding,
+  title={{Understanding Broadcast Based Peer Review on Open Source Software Projects}},
+  author={Rigby, Peter C. and Storey, Margaret-Anne},
+  booktitle={{Proceedings of the 33rd International Conference on Software Engineering}},
+  pages={541--550},
+  year={2011}
+}
