--- a/main.bib
+++ b/main.bib
@@ -904,3 +904,14 @@
   pages={541--550},
   year={2011}
 }
+
+@article{berry1985style,
+  title={{A Style Analysis of C Programs}},
+  author={Berry, R E and Meekings, B AE},
+  journal={{Communications of the ACM}},
+  volume={28},
+  number={1},
+  pages={80--88},
+  year={1985},
+  publisher={ACM New York, NY, USA}
+}
