--- a/main.bib
+++ b/main.bib
@@ -915,3 +915,43 @@
   year={1985},
   publisher={ACM New York, NY, USA}
 }
+
+@article{harrison1986note,
+  title={{A Note on the Berry-Meekings Style Metric}},
+  author={Harrison, Warren and Cook, Curtis R.},
+  journal={Communications of the ACM},
+  volume={29},
+  number={2},
+  pages={123--125},
+  year={1986},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{marca1981some,
+  title={{Some Pascal Style Guidelines}},
+  author={Marca, David},
+  journal={{ACM SIGPLAN Notices}},
+  volume={16},
+  number={4},
+  pages={70--80},
+  year={1981},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{rees1982automatic,
+  title={{Automatic Assessment Aids for Pascal Programs}},
+  author={Rees, Michael J.},
+  journal={{ACM SIGPLAN Notices}},
+  volume={17},
+  number={10},
+  pages={33--42},
+  year={1982},
+  publisher={ACM New York, NY, USA}
+}
+
+@techreport{collberg1997taxonomy,
+  title={{A Taxonomy of Obfuscating Transformations}},
+  author={Collberg, Christian and Thomborson, Clark and Low, Douglas},
+  year={1997},
+  institution={{Department of Computer Science, The University of Auckland, New Zealand}}
+}
