--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -124,13 +124,13 @@ end
 
 \plush{\pptBanner{My Favorite Style Checkers}
   \begin{itemize}
-    \item \href{https://eslint.org/}{ESLint} for JavaScript
-    \item \href{https://clang.llvm.org/extra/clang-tidy/}{Clang-Tidy} for C++
-    \item \href{https://github.com/pylint-dev/pylint}{Pylint} for Python
-    \item \href{https://github.com/rubocop/rubocop}{Rubocop} for Ruby
-    \item \href{https://github.com/squizlabs/PHP_CodeSniffer}{PHP\_CodeSniffer} for PHP
-    \item \href{https://github.com/rust-lang/rustfmt}{rustfmt} for Rust
-    \item \href{https://www.qulice.com}{Qulice} by \citep{bugayenko2014blog0813} for Java (\href{https://checkstyle.sourceforge.io/}{Checkstyle} + \href{https://pmd.github.io/}{PMD})
+    \item \href{https://eslint.org/}{ESLint} (2013) for JavaScript
+    \item \href{https://clang.llvm.org/extra/clang-tidy/}{Clang-Tidy} (2007?) for C++
+    \item \href{https://github.com/pylint-dev/pylint}{Pylint} (2006) for Python
+    \item \href{https://github.com/rubocop/rubocop}{Rubocop} (2012) for Ruby
+    \item \href{https://github.com/squizlabs/PHP_CodeSniffer}{PHP\_CodeSniffer} (2011) for PHP
+    \item \href{https://github.com/rust-lang/rustfmt}{rustfmt} (2015) for Rust
+    \item \href{https://www.qulice.com}{Qulice} by \citep{bugayenko2014blog0813} for Java: \href{https://checkstyle.sourceforge.io/}{Checkstyle} (2001) + \href{https://pmd.github.io/}{PMD} (2022)
   \end{itemize}}
 
 \plush{\pptBanner{How Many Rules in Style Checkers?}
