--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -178,6 +178,14 @@ end
   {rigby2011understanding}
 
 \qte
+  [Moritz Beller]
+  {moritz-beller.jpg}
+  {Most Automated Static Analysis Tools configurations deviate slightly from the \ul{default}, but hardly any introduce new custom analyses. }
+  {beller2016analyzing}
+\pitch{\includegraphics[width=.95\linewidth]{configs.png}
+  \source{beller2016analyzing}}
+
+\qte
   [Jennifer Bauer]
   {jennifer-bauer.jpg}
   {While the perceptual processing of code is required to understand it, \ul{higher level processing}, such as understanding its semantics and reasoning about its functionality, affect program comprehensibility more strongly. The influence of indentation could have been masked by these side effects, so it might well be that the effect of indentation comes more into play when the code is \ul{longer} and \ul{more complex}.}
