--- a/main.bib
+++ b/main.bib
@@ -955,3 +955,13 @@
   year={1997},
   institution={{Department of Computer Science, The University of Auckland, New Zealand}}
 }
+
+@inproceedings{beller2016analyzing,
+  title={{Analyzing the State of Static Analysis: A Large-Scale Evaluation in Open Source Software}},
+  author={Beller, Moritz and Bholanath, Radjino and McIntosh, Shane and Zaidman, Andy},
+  booktitle={{Proceedings of the 23rd International Conference on Software Analysis, Evolution, and Reengineering (SANER)}},
+  volume={1},
+  pages={470--481},
+  year={2016},
+  organization={IEEE}
+}
