--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -184,6 +184,8 @@ end
   {beller2016analyzing}
 \pitch{\includegraphics[width=.95\linewidth]{configs.png}
   \source{beller2016analyzing}}
+\pitch{\includegraphics[width=.95\linewidth]{custom.png}
+  \source{beller2016analyzing}}
 
 \qte
   [Jennifer Bauer]
