--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -188,6 +188,12 @@ end
   \source{beller2016analyzing}}
 
 \qte
+  [Fiorella Zampetti]
+  {fiorella-zampetti.jpg}
+  {Results indicate that build breakages due to static analysis tools are mainly related to adherence to coding standards, and there is also some attention to missing licenses. Build failures related to tools identifying potential bugs or vulnerabilities occur less frequently, and in some cases such tools are activated in a `softer' mode, without making the build fail.}
+  {zampetti2017open}
+
+\qte
   [Jennifer Bauer]
   {jennifer-bauer.jpg}
   {While the perceptual processing of code is required to understand it, \ul{higher level processing}, such as understanding its semantics and reasoning about its functionality, affect program comprehensibility more strongly. The influence of indentation could have been masked by these side effects, so it might well be that the effect of indentation comes more into play when the code is \ul{longer} and \ul{more complex}.}
