--- a/main.bib
+++ b/main.bib
@@ -965,3 +965,12 @@
   year={2016},
   organization={IEEE}
 }
+
+@inproceedings{zampetti2017open,
+  title={{How Open Source Projects use Static Code Analysis Tools in Continuous Integration Pipelines}},
+  author={Zampetti, Fiorella and Scalabrino, Simone and Oliveto, Rocco and Canfora, Gerardo and Di Penta, Massimiliano},
+  booktitle={Proceedings of the 14th International Conference on Mining Software Repositories (MSR)},
+  pages={334--344},
+  year={2017},
+  organization={IEEE}
+}
