--- a/main.bib
+++ b/main.bib
@@ -974,3 +974,12 @@
   year={2017},
   organization={IEEE}
 }
+
+@inproceedings{boogerd2008assessing,
+  title={{Assessing the Value of Coding Standards: An Empirical Study}},
+  author={Boogerd, Cathal and Moonen, Leon},
+  booktitle={Proceedings of the International Conference on Software Maintenance},
+  pages={277--286},
+  year={2008},
+  organization={IEEE}
+}
