--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -158,6 +158,12 @@ end
   {collberg1997taxonomy}
 
 \qte
+  [Cathal Boogerd]
+  {cathal-boogerd.jpg}
+  {First, there are 9 out of 72 rules for which violations were observed that perform significantly better than a random predictor at locating fault-related lines. Second, we observed a negative correlation between MISRA rule violations and observed faults. In addition, 29 out of 72 rules had a zero true positive rate. This makes it possible that adherence to the MISRA standard \ul{as a whole} would have made the software \ul{less reliable}.}
+  {boogerd2008assessing}
+
+\qte
   [Henry Ledgard]
   {henry-ledgard.jpg}
   {An individual's body language helps clarify the spoken word. In a similar sense, the programmer relies on \ul{white space}---what is not said directly---in the code to communicate logic, intent, and understanding.}
@@ -190,7 +196,7 @@ end
 \qte
   [Fiorella Zampetti]
   {fiorella-zampetti.jpg}
-  {Results indicate that build breakages due to static analysis tools are mainly related to adherence to coding standards, and there is also some attention to missing licenses. Build failures related to tools identifying potential bugs or vulnerabilities occur less frequently, and in some cases such tools are activated in a `softer' mode, without making the build fail.}
+  {Results indicate that build breakages due to static analysis tools are \ul{mainly} related to adherence to coding standards, and there is also some attention to missing licenses. Build failures related to tools identifying potential bugs or vulnerabilities occur \ul{less frequently}, and in some cases such tools are activated in a `softer' mode, without making the build fail.}
   {zampetti2017open}
 
 \qte
