--- a/main.bib
+++ b/main.bib
@@ -907,7 +907,7 @@
 
 @article{berry1985style,
   title={{A Style Analysis of C Programs}},
-  author={Berry, R E and Meekings, B AE},
+  author={Berry, R. E. and Meekings, B. A. E.},
   journal={{Communications of the ACM}},
   volume={28},
   number={1},
