--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -130,7 +130,7 @@ end
     \item \href{https://github.com/rubocop/rubocop}{Rubocop} (2012) for Ruby
     \item \href{https://github.com/squizlabs/PHP_CodeSniffer}{PHP\_CodeSniffer} (2011) for PHP
     \item \href{https://github.com/rust-lang/rustfmt}{rustfmt} (2015) for Rust
-    \item \href{https://www.qulice.com}{Qulice} by \citep{bugayenko2014blog0813} for Java: \href{https://checkstyle.sourceforge.io/}{Checkstyle} (2001) + \href{https://pmd.github.io/}{PMD} (2022)
+    \item \href{https://www.qulice.com}{Qulice} by \citet{bugayenko2014blog0813} for Java: \href{https://checkstyle.sourceforge.io/}{Checkstyle} (2001) + \href{https://pmd.github.io/}{PMD} (2022)
   \end{itemize}}
 
 \plush{\pptBanner{How Many Rules in Style Checkers?}
