--- a/main.bib
+++ b/main.bib
@@ -983,3 +983,20 @@
   year={2008},
   organization={IEEE}
 }
+
+@inproceedings{tomasdottir2017and,
+  title={{Why and How JavaScript Developers Use Linters}},
+  author={T{\'o}masd{\'o}ttir, Krist{\'\i}n Fj{\'o}la and Aniche, Mauricio and Van Deursen, Arie},
+  booktitle={{Proceedings of the 32nd International Conference on Automated Software Engineering (ASE)}},
+  pages={578--589},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{obermuller2021code,
+  title={{Code Perfumes: Reporting Good Code to Encourage Learners}},
+  author={Oberm{\"u}ller, Florian and Bloch, Lena and Greifenstein, Luisa and Heuer, Ute and Fraser, Gordon},
+  booktitle={{Proceedings of the 16th Workshop in Primary and Secondary Computing Education}},
+  pages={1--10},
+  year={2021}
+}
