--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -65,6 +65,14 @@
   \end{itemize}}
 
 \qte
+  [Krist{\'\i}n Fj{\'o}la T{\'o}masd{\'o}ttir]
+  {kristin-tomasdottir.jpg}
+  {Every single interview participant mentioned that one of the reasons why they use a linter is to maintain code \ul{consistency}.}
+  {tomasdottir2018adoption}
+\pitch{\includegraphics[width=.95\linewidth]{rules.png}
+  \source{tomasdottir2018adoption}}
+
+\qte
   [Florian Oberm{\"u}ller]
   {florian-obermuller.jpg}
   {We introduce the concept of \ul{code perfumes} as the counterpart to \ul{code smells}, indicating the correct application of programming practices considered to be good. Using a catalogue of 25 code perfumes for, we empirically demonstrate that these represent frequent practices in, and we find that better programs indeed contain more code perfumes.}
