--- a/main.bib
+++ b/main.bib
@@ -1000,3 +1000,14 @@
   pages={1--10},
   year={2021}
 }
+
+@article{tomasdottir2018adoption,
+  title={{The Adoption of JavaScript Linters in Practice: A Case Study on ESLint}},
+  author={T{\'o}masd{\'o}ttir, Krist{\'\i}n Fj{\'o}la and Aniche, Mauricio and Van Deursen, Arie},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={46},
+  number={8},
+  pages={863--891},
+  year={2018},
+  publisher={IEEE}
+}
