--- a/main.bib
+++ b/main.bib
@@ -1011,3 +1011,14 @@
   year={2018},
   publisher={IEEE}
 }
+
+@article{chess2004static,
+  title={{Static Analysis for Security}},
+  author={Chess, Brian and McGraw, Gary},
+  journal={{IEEE Security \& Privacy}},
+  volume={2},
+  number={6},
+  pages={76--79},
+  year={2004},
+  publisher={IEEE}
+}
