--- a/main.bib
+++ b/main.bib
@@ -1022,3 +1022,18 @@
   year={2004},
   publisher={IEEE}
 }
+
+@misc{arguelles2020,
+  title={{Code Coverage Best Practices}},
+  author={Arguelles, Carlos and Ivankovi{\'c}, Marko and Bender, Adam},
+  year={2020},
+  url={https://testing.googleblog.com/2020/08/code-coverage-best-practices.html}
+}
+
+@misc{sarif2023,
+  author = {OASIS},
+  title = {{Static Analysis Results Interchange Format (SARIF) Version 2.1.0 Plus Errata 01}},
+  howpublished = {\url{https://docs.oasis-open.org/sarif/sarif/v2.1.0/sarif-v2.1.0.html}},
+  year = {2023},
+  note = {[Online; accessed 08-03-2024]}
+}
