--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -128,6 +128,7 @@ while (x > 0) {
   \end{itemize}}
 
 \pitch{
+  \pptBanner{SARIF}
   \begin{multicols}{2}
   \includegraphics[width=.95\linewidth]{sarif.png}
   \par\columnbreak\par
