--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -97,10 +97,10 @@ int f(int x) {
 \end{ffcode}
 }
 \par\columnbreak\par
-\textbf{T}rue \textbf{P}ositive (TP): \\ ``Division by zero''\par
-\textbf{F}alse \textbf{P}ositive (FP): \\ ``Integer overflow''\par
-\textbf{T}rue \textbf{N}egative (TN): \\ ``No buffer overflow''\par
-\textbf{F}alse \textbf{N}egative (FN): \\ ``No errors at all''\par
+\nospell{\textbf{T}rue \textbf{P}ositive} (TP): \\ ``Division by zero''\par
+\nospell{\textbf{F}alse \textbf{P}ositive} (FP): \\ ``Integer overflow''\par
+\nospell{\textbf{T}rue \textbf{N}egative} (TN): \\ ``No buffer overflow''\par
+\nospell{\textbf{F}alse \textbf{N}egative} (FN): \\ ``No errors at all''\par
 \end{multicols}
 \plush{}
 
